--- a/CustomCell/Base.lproj/Main.storyboard
+++ b/CustomCell/Base.lproj/Main.storyboard
@@ -27,11 +27,11 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="140"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sD2-sY-X7C">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sD2-sY-X7C">
                                                     <rect key="frame" x="0.0" y="0.0" width="150" height="140"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="150" id="1TT-xb-bRA"/>
-                                                        <constraint firstAttribute="height" constant="150" id="QhX-Y7-mWw"/>
+                                                        <constraint firstAttribute="height" priority="999" constant="150" id="QhX-Y7-mWw"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Rg-oo-9O0">
